--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "atom-rust",
-  "main": "./lib/atom-rust",
+  "main": "./dist/atom-rust",
   "version": "0.1.1",
   "description": "Provide Rust language support in Atom.",
   "keywords": [
@@ -8,13 +8,47 @@
     "language",
     "server"
   ],
-  "repository": "https://github.com/sethlopezme/atom-rust",
-  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/sethlopezme/atom-rust"
+  },
+  "bugs": {
+    "url": "https://github.com/sethlopezme/atom-rust/issues"
+  },
   "engines": {
     "atom": ">=1.17.0 <2.0.0"
   },
+  "license": "MIT",
   "dependencies": {
-    "atom-languageclient": "git://github.com/atom/atom-languageclient.git"
+    "atom-languageclient": "git://github.com/atom/atom-languageclient.git",
+    "which": "^1.2.14"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.24.1",
+    "babel-eslint": "^7.2.3",
+    "babel-preset-env": "^1.4.0",
+    "babel-preset-flow": "^6.23.0",
+    "eslint": "^3.19.0",
+    "eslint-plugin-flowtype": "^2.33.0",
+    "flow-bin": "^0.46.0"
+  },
+  "scripts": {
+    "build": "babel src --out-dir dist",
+    "watch": "babel --watch src --out-dir dist"
+  },
+  "configSchema": {
+    "command": {
+      "title": "RLS Command",
+      "description": "Command to start the Rust Language Server.",
+      "type": "string",
+      "default": "rustup run nightly rls"
+    },
+    "useRlsRoot": {
+      "title": "Use RLS_ROOT",
+      "description": "Use the value of the `RLS_ROOT` environment variable as the current working directory when starting RLS.",
+      "type": "boolean",
+      "default": false
+    }
   },
   "consumedServices": {
     "linter-indie": {
@@ -38,20 +72,6 @@
       "versions": {
         "0.0.0": "provideHyperclick"
       }
-    }
-  },
-  "configSchema": {
-    "command": {
-      "title": "RLS Command",
-      "description": "Command to start the Rust Language Server.",
-      "type": "string",
-      "default": "rustup run nightly rls"
-    },
-    "useRlsRoot": {
-      "title": "Use RLS_ROOT",
-      "description": "Use the value of the `RLS_ROOT` environment variable as the current working directory when starting RLS.",
-      "type": "boolean",
-      "default": false
     }
   }
 }
