chore: Remove flowtype

--- a/package.json
+++ b/package.json
@@ -25,12 +25,7 @@
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-preset-env": "^1.4.0",
-    "babel-preset-flow": "^6.23.0",
-    "eslint": "^3.19.0",
-    "eslint-plugin-flowtype": "^2.33.0",
-    "flow-bin": "^0.46.0"
+    "babel-preset-env": "^1.4.0"
   },
   "scripts": {
     "build": "babel src --out-dir dist",
